2021-11-01  7.1.0-14  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-14 GIT revision 19332:bb886ff39:20211101

2021-11-01  7.1.0-14  <quetzlzacatenango@image...>
  * Fix broken release.

2021-10-28  7.1.0-13  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-13 GIT revision 19325:987f36b50:20211028

2021-10-28  7.1.0-13  Dirk Lemstra <dirk@lem.....org>
  * Fix stack overflow when parsing malicious ps image file (report from
    Muhammad Aldo Firmansyah).

2021-10-25  7.1.0-12  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-12 GIT revision 19318:113f8f901:20211025

2021-10-15  7.1.0-12  <quetzlzacatenango@image...>
  * Fix x64 build.

2021-10-24  7.1.0-11  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-11 GIT revision 19313:fbf76f2ef:20211024

2021-10-11  7.1.0-11  <quetzlzacatenango@image...>
  * Fix connected component abort trap (reference
    https://github.com/ImageMagick/ImageMagick/issues/4372).
  * Fix possible unitialized values (reference
    https://github.com/ImageMagick/ImageMagick/issues/4379).
  * Fix stack overflow when parsing malicious tiff image file (report from
    Muhammad Aldo Firmansyah).

2021-10-10  7.1.0-10  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-10 GIT revision 19236:07ebe6b6e:20211010

2021-10-03  7.1.0-10  <quetzlzacatenango@image...>
  * Improved algorithm for automatic calculation of pointsize for caption and
    labels.
  * Support -auto-orient option in the identify utlity.

2021-10-03  7.1.0-9  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-9 GIT revision 19220:7921bf068:20211003

2021-10-03  7.1.0-9  Dirk Lemstra <dirk@lem.....org>
  * Squash a dump truck load of VisualStudio compiler warnings.
  * Improved algorithm for automatic calculation of word breaks and pointsize
    for caption and labels.

2021-09-19  7.1.0-9  <quetzlzacatenango@image...>